--- a/backup/function_overloading/function_overloading.ipynb
+++ b/backup/function_overloading/function_overloading.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "meets (generic function with 4 methods)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "abstract type Pet end\n",
     "\n",
@@ -53,20 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fido meets rex and sniffs.\n",
-      "fido meets whiskers and chases.\n",
-      "whiskers meets rex and hisses.\n",
-      "whiskers meets spots and slinks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fido     = Dog(\"fido\")\n",
     "rex      = Dog(\"rex\")\n",
@@ -160,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cxx\"\"\"\n",
     "#include <iostream>\n",
@@ -228,28 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ErrorException",
-     "evalue": "Could not find `main` in translation unit",
-     "output_type": "error",
-     "traceback": [
-      "Could not find `main` in translation unit",
-      "",
-      "Stacktrace:",
-      " [1] error(::String) at .\\error.jl:33",
-      " [2] lookup_name(::Cxx.CxxCore.ClangCompiler, ::Tuple{Symbol}, ::Ptr{Nothing}, ::Cxx.CxxCore.CppPtr{Cxx.CxxCore.CxxQualType{Cxx.CxxCore.CppBaseType{Symbol(\"clang::Decl\")},(false, false, false)},(false, false, false)}, ::Bool) at C:\\Users\\carsten\\.julia\\packages\\Cxx\\1RaOv\\src\\typetranslation.jl:116",
-      " [3] declfornns(::Cxx.CxxCore.ClangCompiler, ::Type{Cxx.CxxCore.CppNNS{Tuple{:main}}}, ::Ptr{Nothing}) at C:\\Users\\carsten\\.julia\\packages\\Cxx\\1RaOv\\src\\codegen.jl:273",
-      " [4] declfornns(::Cxx.CxxCore.ClangCompiler, ::Type{Cxx.CxxCore.CppNNS{Tuple{:main}}}) at C:\\Users\\carsten\\.julia\\packages\\Cxx\\1RaOv\\src\\codegen.jl:240",
-      " [5] _cppcall(::Type, ::Type, ::Bool, ::Bool, ::Tuple{}) at C:\\Users\\carsten\\.julia\\packages\\Cxx\\1RaOv\\src\\codegen.jl:559",
-      " [6] #s37#39(::Any, ::Any, ::Any, ::Any) at C:\\Users\\carsten\\.julia\\packages\\Cxx\\1RaOv\\src\\codegen.jl:841",
-      " [7] (::Core.GeneratedFunctionStub)(::Any, ::Vararg{Any,N} where N) at .\\boot.jl:524",
-      " [8] top-level scope at In[2]:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@cxx main()"
    ]
@@ -272,7 +220,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Templates"
+    "## Dynamic dispatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* In Julia, type computation can happen dynamically (at runtime) or statically (at JIT compile time).\n",
+    "\n",
+    "* The static type computation is equivalent to the C++ version"
    ]
   },
   {
@@ -283,7 +240,10 @@
     {
      "data": {
       "text/plain": [
-       "true"
+       "3-element Array{Any,1}:\n",
+       " 1      \n",
+       " 2.0    \n",
+       "  [3, 4]"
       ]
      },
      "execution_count": 2,
@@ -292,63 +252,38 @@
     }
    ],
    "source": [
-    "cxx\"\"\"\n",
-    "#include <iostream>\n",
-    "#include <string>\n",
-    "\n",
-    "using namespace std;\n",
-    "\n",
-    "class Pet {\n",
-    "    public:\n",
-    "        string name;\n",
-    "};\n",
-    "\n",
-    "string meets(Pet a, Pet b) { return \"FALLBACK\"; }\n",
-    "\n",
-    "template <class T, class S>\n",
-    "void encounter(T a, S b) {\n",
-    "    string verb = meets(a,b);\n",
-    "    cout << a.name << \" meets \" << b.name << \" and \" << verb << endl;\n",
-    "}\n",
-    "\n",
-    "class Dog : public Pet {};\n",
-    "class Cat : public Pet {};\n",
-    "\n",
-    "string meets(Dog a, Dog b) { return \"sniffs\"; }\n",
-    "string meets(Dog a, Cat b) { return \"chases\"; }\n",
-    "string meets(Cat a, Dog b) { return \"hisses\"; }\n",
-    "string meets(Cat a, Cat b) { return \"slinks\"; }\n",
-    "\n",
-    "int main() {\n",
-    "    Dog fido;     fido.name = \"Fido\";\n",
-    "    Dog rex;      rex.name = \"Rex\";\n",
-    "    Cat whiskers; whiskers.name = \"Whiskers\";\n",
-    "    Cat spots;    spots.name = \"Spots\";\n",
-    "\n",
-    "    encounter(fido, rex);\n",
-    "    encounter(fido, whiskers);\n",
-    "    encounter(whiskers, rex);\n",
-    "    encounter(whiskers, spots);\n",
-    "\n",
-    "    return 0;\n",
-    "}\n",
-    "\"\"\""
+    "A1 = [1, 2.0, [3,4]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Float64,1}:\n",
+       " 1.0\n",
+       " 2.0\n",
+       " 5.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "@cxx main()"
+    "using LinearAlgebra\n",
+    "norm.(A1) # norm function is chosen at runtime, depending on actual content of the array"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other example"
+    "In C++, this could be realized by using a common base class and a virtual norm function. Demonstrating this in a simple example:"
    ]
   },
   {
@@ -362,51 +297,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cxx\"\"\"\n",
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
+    "struct A {\n",
+    "   void f() { cout << \"Class A\" << endl; }\n",
+    "};\n",
+    "\n",
+    "struct B: A {\n",
+    "   void f() { cout << \"Class B\" << endl; }\n",
+    "};\n",
+    "\n",
+    "void g(A& arg) {\n",
+    "   arg.f();\n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "   B x;\n",
+    "   g(x);\n",
+    "}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In file included from C:/Cxx.cpp:1:\n",
-      "In[2]:27:5: warning: only one parameter on 'main' declaration\n",
-      "int main(int i) {\n",
-      "    ^\n",
-      "In[2]:35:15: error: use of undeclared identifier 'entropy'; did you mean 'strcpy'?\n",
-      "    encounter(entropy, rex);\n",
-      "              ^~~~~~~\n",
-      "              strcpy\n",
-      "C:\\Users\\carsten\\.julia\\packages\\Cxx\\1RaOv\\src\\..\\deps\\usr\\mingw\\sys-root\\include\\string.h:61:18: note: 'strcpy' declared here\n",
-      "  char * __cdecl strcpy(char * __restrict__ _Dest,const char * __restrict__ _Source);\n",
-      "                 ^\n",
-      "In file included from C:/Cxx.cpp:1:\n",
-      "In[2]:15:19: error: no matching function for call to 'meets'\n",
-      "    string verb = meets(a,b);\n",
-      "                  ^~~~~\n",
-      "In[2]:35:5: note: in instantiation of function template specialization 'encounter<char *(*)(char *, const char *), Dog>' requested here\n",
-      "    encounter(entropy, rex);\n",
-      "    ^\n",
-      "In[2]:22:8: note: candidate function not viable: no known conversion from 'char *(*)(char *, const char *)' to 'Dog' for 1st argument\n",
-      "string meets(Dog a, Dog b) { return \"sniffs\"; }\n",
-      "       ^\n",
-      "In[2]:24:8: note: candidate function not viable: no known conversion from 'char *(*)(char *, const char *)' to 'Cat' for 1st argument\n",
-      "string meets(Cat a, Dog b) { return \"hisses\"; }\n",
-      "       ^\n",
-      "In[2]:11:8: note: candidate function not viable: no known conversion from 'char *(*)(char *, const char *)' to 'Pet' for 1st argument\n",
-      "string meets(Pet a, Pet b) { return \"FALLBACK\"; }\n",
-      "       ^\n",
-      "In[2]:23:8: note: candidate function not viable: no known conversion from 'char *(*)(char *, const char *)' to 'Dog' for 1st argument\n",
-      "string meets(Dog a, Cat b) { return \"chases\"; }\n",
-      "       ^\n",
-      "In[2]:25:8: note: candidate function not viable: no known conversion from 'char *(*)(char *, const char *)' to 'Cat' for 1st argument\n",
-      "string meets(Cat a, Cat b) { return \"slinks\"; }\n",
-      "       ^\n",
-      "In[2]:16:14: error: member reference base type 'char *(*)(char *, const char *)' is not a structure or union\n",
-      "    cout << a.name << \" meets \" << b.name << \" and \" << verb << endl;\n",
-      "            ~^~~~~\n"
+      "Class A\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "@cxx main(); # static dispatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -421,62 +371,163 @@
    "source": [
     "cxx\"\"\"\n",
     "#include <iostream>\n",
-    "#include <string>\n",
-    "\n",
     "using namespace std;\n",
     "\n",
-    "class Pet {\n",
-    "    public:\n",
-    "        string name;\n",
+    "struct A {\n",
+    "   virtual void f() { cout << \"Class A\" << endl; }\n",
     "};\n",
     "\n",
-    "string meets(Pet a, Pet b) { return \"FALLBACK\"; }\n",
+    "struct B: A {\n",
+    "   void f() { cout << \"Class B\" << endl; }\n",
+    "};\n",
     "\n",
-    "template <class T, class S>\n",
-    "void encounter(T a, S b) {\n",
-    "    string verb = meets(a,b);\n",
-    "    cout << a.name << \" meets \" << b.name << \" and \" << verb << endl;\n",
+    "void g(A& arg) {\n",
+    "   arg.f();\n",
     "}\n",
     "\n",
-    "class Dog : public Pet {};\n",
-    "class Cat : public Pet {};\n",
-    "\n",
-    "string meets(Dog a, Dog b) { return \"sniffs\"; }\n",
-    "string meets(Dog a, Cat b) { return \"chases\"; }\n",
-    "string meets(Cat a, Dog b) { return \"hisses\"; }\n",
-    "string meets(Cat a, Cat b) { return \"slinks\"; }\n",
-    "\n",
-    "int main(int i) {\n",
-    "    \n",
-    "    if(i>5){\n",
-    "        Dog entropy; entropy.name = \"Entropy\";\n",
-    "    }else{\n",
-    "        Cat entropy; entropy.name = \"Entropy\";\n",
-    "    }\n",
-    "    Dog rex; rex.name = \"Rex\";\n",
-    "\n",
-    "    encounter(entropy, rex);\n",
-    "\n",
-    "    return 0;\n",
+    "int main() {\n",
+    "   B x;\n",
+    "   g(x);\n",
     "}\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class B\n"
+     ]
+    }
+   ],
    "source": [
-    "@cxx main(3)"
+    "@cxx main(); # dynamic dispatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A virtual function cannot be global.\n",
+    "* `arg.f()` is single dispatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Julia:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Class B\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abstract type A end\n",
+    "struct B <: A end\n",
+    "\n",
+    "f(::A) = \"Class A\"\n",
+    "f(::B) = \"Class B\"\n",
+    "\n",
+    "g(arg::A) = f(arg)\n",
+    "\n",
+    "x = B()\n",
+    "g(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Julia implements *multiple dispatch*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Any,1}:\n",
+       " 1       \n",
+       " 2.0     \n",
+       "  \"hello\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1 = [1, 2.0, \"hello\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Any,1}:\n",
+       "   4.0f0   \n",
+       " 0 + 5im   \n",
+       "    \"world\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A2 = [4f0, 5im, \"world\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Any,1}:\n",
+       "     4.0f0        \n",
+       " 0.0 + 10.0im     \n",
+       "      \"helloworld\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1 .* A2 # dynamic dispatch based on both(!) arguments to *"
+   ]
   }
  ],
  "metadata": {
