using AbstractTrees.print_tree

--- a/Day1/1_types_and_dispatch.ipynb
+++ b/Day1/1_types_and_dispatch.ipynb
@@ -270,13 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function show_subtypetree(T, level=1, indent=4)\n",
-    "   level == 1 && println(T)\n",
-    "   for s in subtypes(T)\n",
-    "     println(join(fill(\" \", level * indent)) * string(s))\n",
-    "     show_subtypetree(s, level+1, indent)\n",
-    "   end\n",
-    "end"
+    "using AbstractTrees\n",
+    "AbstractTrees.children(x::Type) = subtypes(x)"
    ]
   },
   {
@@ -285,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_subtypetree(Number)"
+    "print_tree(Number)"
    ]
   },
   {
