static arrays in linalg

--- a/Day2/4_linear_algebra/1_linalg.ipynb
+++ b/Day2/4_linear_algebra/1_linalg.ipynb
@@ -1074,28 +1074,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# If time permits: Dude, I have a GPU!"
+    "## If time permits"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make another case for *generic programming*, if you want to move the calculation to a GPU, chances are you only have to change the type of your matrix!\n",
-    "\n",
-    "Of course, this is only true if you have one :)\n",
-    "\n",
-    "```julia\n",
-    "using CuArrays, BenchmarkTools\n",
-    "\n",
-    "A, B = rand(1000,1000), rand(1000,1000);\n",
-    "Agpu, Bgpu = CuArray(A), CuArray(B);\n",
-    "println(\"A*B (cpu)\")\n",
-    "@btime A*B;\n",
-    "\n",
-    "println(\"A*B (gpu)\")\n",
-    "@btime Agpu*Bgpu;\n",
-    "```"
+    "### StaticArrays.jl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using StaticArrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = SMatrix{2,2}(1, 2, 3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size(typeof(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare to\n",
+    "M = Matrix(m)\n",
+    "size(typeof(M))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@SMatrix rand(4,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools, LinearAlgebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "println(\"Inversion\")\n",
+    "@btime inv(m);\n",
+    "@btime inv(M);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "println(\"Matrix x vector\")\n",
+    "v = rand(2)\n",
+    "@btime $m * $v;\n",
+    "@btime $M * $v;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vstatic = @SArray rand(2);\n",
+    "@code_native debuginfo=:none m*vstatic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@code_native debuginfo=:none M*v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dude, I have a GPU!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make another case for *generic programming*, if you want to move the calculation to a GPU, chances are you only have to change the type of your matrix!"
    ]
   }
  ],
