--- a/backup/gpu/gpu.ipynb
+++ b/backup/gpu/gpu.ipynb
@@ -388,7 +388,28 @@
    "outputs": [],
    "source": [
     "using Distributed\n",
-    "addprocs([(\"cbauer17@gpu2\", 1)]; exename=`/projects/ag-trebst/bauer/bin/julia-1.3.1/bin/julia`, exeflags=`--project=/projects/ag-trebst/bauer/JuliaOulu20/backup/gpu_remote`, dir=\"/projects/ag-trebst/bauer/JuliaOulu20/backup/gpu_remote\", tunnel=true)\n",
+    "addprocs([(\"cbauer17@gpu2\", 1)]; exename=`/projects/ag-trebst/bauer/bin/julia-1.3.1/bin/julia`, exeflags=`--project=/projects/ag-trebst/bauer/JuliaOulu20/backup/gpu`, dir=\"/projects/ag-trebst/bauer/JuliaOulu20/backup/gpu\", tunnel=true)\n",
+    "@fetch gethostname()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = (exename=`nice -19 /home/bauer/bin/julia-1.3.1/bin/julia --project=/home/bauer/JuliaOulu20`, dir=\"/home/bauer\")\n",
+    "addprocs([(\"l94\", :auto)]; params...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Distributed\n",
+    "addprocs([(\"cbauer17@gpu2\", 1)]; exename=`/projects/ag-trebst/bauer/bin/julia-1.3.1/bin/julia`, dir=`/projects/ag-trebst/bauer`, tunnel=true)\n",
     "@fetch gethostname()"
    ]
   },
