--- a/Day1/1_types_and_dispatch.ipynb
+++ b/Day1/1_types_and_dispatch.ipynb
@@ -542,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@which f(1, \"Köln!\")"
+    "@which f(1, \"Oulu!\")"
    ]
   },
   {
